# selector4nix

./: .editorconfig  .envrc  Cargo.toml  README.md  flake.nix  renovate.json  rust-toolchain.toml
.github/workflows/: release.yml  system-test.yml
components/selector4nix-actor/: Cargo.toml
components/selector4nix-actor/src/: lib.rs
components/selector4nix-actor/src/actor/: address.rs  mod.rs  pre.rs  runner.rs
components/selector4nix-actor/src/registry/: builder.rs  container.rs  mod.rs
docs/: configuration.md  selector4nix.example.toml
nix/: nixos-module.nix  package.nix
nix/flake/: devshell.nix  module.nix  overlay.nix  package.nix
nix/flake/dev/: flake.nix
nix/modules/: common.nix  home-manager.nix  nixos.nix
src/: bootstrap.rs  lib.rs  main.rs
src/api/: mod.rs  router.rs  state.rs
src/api/handlers/: cache_info.rs  mod.rs  nar.rs  nar_info.rs  status.rs  substituter.rs
src/application/: mod.rs
src/application/nar/: mod.rs  usecase.rs
src/application/nar/actor/: mod.rs  runner.rs
src/application/nar/usecase/: resolution.rs
src/application/nar_file/usecase/: streaming.rs
src/application/nar_info/actor/: runner.rs
src/application/nar_info/usecase/: mod.rs  resolution.rs
src/application/status/usecase/: mod.rs  query.rs
src/application/substituter/: mod.rs
src/application/substituter/actor/: mod.rs  runner.rs
src/application/substituter/usecase/: query.rs
src/domain/common/: url.rs
src/domain/nar/: mod.rs
src/domain/nar/actor/: mod.rs  runner.rs  state.rs  util.rs
src/domain/nar/index/: mod.rs  (+2 more)
src/domain/nar_file/: repository.rs  service.rs
src/domain/nar_info/: repository.rs  service.rs
src/domain/substituter/: mod.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: general_parsed.rs  mod.rs  parsed.rs  raw.rs
src/infrastructure/index/: mod.rs  nar_file.rs  nar_path.rs  substituter_availability.rs
src/infrastructure/provider/: mod.rs  nar_info_provider.rs  nar_stream_provider.rs
src/infrastructure/registry/: mod.rs  nar.rs  substituter.rs
src/infrastructure/repository/: nar_file.rs  nar_info.rs  substituter.rs
src/infrastructure/upstream/: mod.rs  nar_info.rs  nar_stream.rs
src/infrastructure/util/: mod.rs
src/usecase/: mod.rs  nar.rs  substituter.rs
tests/integration/: config_test.rs  main.rs  nar_info_resolution_service_test.rs  nar_info_service_test.rs  status_test.rs
tests/integration/fixture/: nar_file.rs  nar_info.rs
tests/integration/mock/: nar_info_provider.rs
tests/system/cache-persistence/: package.nix  run.sh
tests/system/nar-info-querying/: Cargo.toml
(+45 files in other folders)
