[package]
name = "selector4nix"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["http2"] }
bytes = "1.11.1"
dynosaur = "0.3.0"
futures = "0.3.32"
url = "2"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_toml = "0.0.1"
snafu = "0.9.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
